# nvsvocprez/routes/fair_impact/artefacts.py
@@ -1,4 +1,4 @@
-"""FAIR-IMPACT artefacts endpoint."""
+"""FAIR-IMPACT endpoints."""
 
 from datetime import date
 import os
@@ -117,6 +117,9 @@ def artefacts(request: Request):
     data = response.json()
     graph_scheme_items = get_scheme_graph_items(data)
     json_ld = {"@context": artefacts_context, "@graph": graph_collection_items + graph_scheme_items}
+
+    display_param = request.query_params.get("display", "all")
+    filter_fields_in_graph(json_ld, display_param)
 
     return JSONResponse(content=json_ld, status_code=response.status_code)
 
@@ -556,3 +559,19 @@ def get_response_bytesize(url):
         response = client.get(url)
         response.raise_for_status()
         return len(response.content)
+
+
+def filter_fields_in_graph(json_data: dict, fields_to_remove: str) -> str:
+    
+    fields_to_display = [field.strip() for field in fields_to_remove.split(",")]
+
+    if "all" in fields_to_display:
+        return
+
+    # Mandatory fields
+    protected_fields = {"acronym", "@id", "links"}
+
+    for item in json_data.get("@graph", []):
+        keys_to_remove = [key for key in item if key not in fields_to_display and key not in protected_fields]
+        for key in keys_to_remove:
+            item.pop(key, None)
